[FIX] web: improve contrast of selected search completion

--- a/web/static/src/less/search_view.less
+++ b/web/static/src/less/search_view.less
@@ -83,7 +83,7 @@
                 padding-left: 50px;
             }
             &.o-selection-focus {
-                background-color: @table-bg-hover;
+                background-color: @table-bg-accent;
             }
             a {
                 display: inline-block;
